--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="container">
       <div class="result">0</div>
       <div class="buttons">
-        <button class="btn-grey">AC</button>
-        <button class="btn-grey">+/-</button>
-        <button class="btn-grey">%</button>
-        <button class="btn-calc">/</button>
-        <button class="btn-num">7</button>
-        <button class="btn-num">8</button>
-        <button class="btn-num">9</button>
-        <button class="btn-calc">*</button>
-        <button class="btn-num">4</button>
-        <button class="btn-num">5</button>
-        <button class="btn-num">6</button>
-        <button class="btn-calc">-</button>
-        <button class="btn-num">1</button>
-        <button class="btn-num">2</button>
-        <button class="btn-num">3</button>
-        <button class="btn-calc">+</button>
-        <button class="btn-num">0</button>
-        <button class="btn-num">.</button>
-        <button class="btn-calc">=</button>
+        <button class="btn btn-grey">AC</button>
+        <button class="btn btn-grey">+/-</button>
+        <button class="btn btn-grey">%</button>
+        <button class="btn btn-calc">/</button>
+        <button class="btn btn-num">7</button>
+        <button class="btn btn-num">8</button>
+        <button class="btn btn-num">9</button>
+        <button class="btn btn-calc">*</button>
+        <button class="btn btn-num">4</button>
+        <button class="btn btn-num">5</button>
+        <button class="btn btn-num">6</button>
+        <button class="btn btn-calc">-</button>
+        <button class="btn btn-num">1</button>
+        <button class="btn btn-num">2</button>
+        <button class="btn btn-num">3</button>
+        <button class="btn btn-calc">+</button>
+        <button class="btn btn-num">0</button>
+        <button class="btn btn-num">.</button>
+        <button class="btn btn-calc">=</button>
       </div>
     </div>
   </body>
