--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
     <div class="container">
       <div class="result">0</div>
       <div class="buttons">
-        <button class="btn btn-grey">AC</button>
-        <button class="btn btn-grey">+/-</button>
-        <button class="btn btn-grey">%</button>
-        <button class="btn btn-calc">/</button>
-        <button class="btn btn-num">7</button>
-        <button class="btn btn-num">8</button>
-        <button class="btn btn-num">9</button>
-        <button class="btn btn-calc">*</button>
-        <button class="btn btn-num">4</button>
-        <button class="btn btn-num">5</button>
-        <button class="btn btn-num">6</button>
-        <button class="btn btn-calc">-</button>
-        <button class="btn btn-num">1</button>
-        <button class="btn btn-num">2</button>
-        <button class="btn btn-num">3</button>
-        <button class="btn btn-calc">+</button>
-        <button class="btn btn-num">0</button>
-        <button class="btn btn-num">.</button>
-        <button class="btn btn-calc">=</button>
+        <button class="btn btn-grey" data-value="AC">AC</button>
+        <button class="btn btn-grey" data-value="toggle">+/-</button>
+        <button class="btn btn-grey" data-value="%">%</button>
+
+        <button class="btn btn-op" data-value="/">/</button>
+
+        <button class="btn btn-num" data-value="7">7</button>
+        <button class="btn btn-num" data-value="8">8</button>
+        <button class="btn btn-num" data-value="9">9</button>
+
+        <button class="btn btn-op" data-value="*">*</button>
+
+        <button class="btn btn-num" data-value="4">4</button>
+        <button class="btn btn-num" data-value="5">5</button>
+        <button class="btn btn-num" data-value="6">6</button>
+
+        <button class="btn btn-op" data-value="-">-</button>
+
+        <button class="btn btn-num" data-value="1">1</button>
+        <button class="btn btn-num" data-value="2">2</button>
+        <button class="btn btn-num" data-value="3">3</button>
+
+        <button class="btn btn-op" data-value="+">+</button>
+
+        <button class="btn btn-num" data-value="0">0</button>
+        <button class="btn btn-num" data-value=".">.</button>
+        <button class="btn equals" data-value="=">=</button>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
